[gd_scene load_steps=29 format=3 uid="uid://brx6e06tqnlpe"]

[ext_resource type="Script" path="res://scripts/domino_manager.gd" id="1_emtyj"]
[ext_resource type="Texture2D" uid="uid://c7jtjwncnric2" path="res://assets/background/pixil-frame-0 (9).png" id="1_vvjxa"]
[ext_resource type="PackedScene" uid="uid://o48jk4dckoer" path="res://scenes/domino_slot.tscn" id="2_cy4qi"]
[ext_resource type="Script" path="res://scripts/domino_slot.gd" id="3_kpsxb"]
[ext_resource type="Script" path="res://scripts/player_hand.gd" id="4_o0xru"]
[ext_resource type="Script" path="res://scripts/teammate_hand.gd" id="5_vddux"]
[ext_resource type="Script" path="res://scripts/game_manager.gd" id="6_wuefs"]
[ext_resource type="Script" path="res://scripts/opponent_hand_1.gd" id="6_xnnqk"]
[ext_resource type="Script" path="res://scripts/opponent_hand_2.gd" id="7_mjw1d"]
[ext_resource type="FontFile" uid="uid://cxxfk50w5chw3" path="res://assets/font/Pixeboy-z8XGD.ttf" id="9_gaopx"]
[ext_resource type="Texture2D" uid="uid://cy1qnxemur2r1" path="res://assets/coin/coin1_16x16.png" id="9_vcm17"]
[ext_resource type="Texture2D" uid="uid://drvwc2y4mmsu6" path="res://assets/dominos/tree_bark_dominoes.png" id="12_xlbo7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bycrx"]
atlas = ExtResource("9_vcm17")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3k5c0"]
atlas = ExtResource("9_vcm17")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7ram"]
atlas = ExtResource("9_vcm17")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_odoih"]
atlas = ExtResource("9_vcm17")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_no2lj"]
atlas = ExtResource("9_vcm17")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_miovp"]
atlas = ExtResource("9_vcm17")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ew54m"]
atlas = ExtResource("9_vcm17")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mp52s"]
atlas = ExtResource("9_vcm17")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lwkfs"]
atlas = ExtResource("9_vcm17")
region = Rect2(128, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4m5wg"]
atlas = ExtResource("9_vcm17")
region = Rect2(144, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1318x"]
atlas = ExtResource("9_vcm17")
region = Rect2(160, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4s4x8"]
atlas = ExtResource("9_vcm17")
region = Rect2(176, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_oj7pj"]
atlas = ExtResource("9_vcm17")
region = Rect2(192, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_87eef"]
atlas = ExtResource("9_vcm17")
region = Rect2(208, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8hfvs"]
atlas = ExtResource("9_vcm17")
region = Rect2(224, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_vuva4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bycrx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3k5c0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7ram")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_odoih")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_no2lj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_miovp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ew54m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mp52s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lwkfs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4m5wg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1318x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4s4x8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oj7pj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_87eef")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8hfvs")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="42game" type="Node2D"]

[node name="Pixil-frame-0(9)" type="Sprite2D" parent="."]
position = Vector2(197.75, 42)
scale = Vector2(11.5469, 5.625)
texture = ExtResource("1_vvjxa")

[node name="Pixil-frame-0(9)2" type="Sprite2D" parent="."]
position = Vector2(1079.94, 42)
scale = Vector2(12.3086, 5.625)
texture = ExtResource("1_vvjxa")

[node name="gameManager" type="Node2D" parent="."]
visible = false
script = ExtResource("6_wuefs")

[node name="dominoManager" type="Node2D" parent="."]
position = Vector2(1, 0)
script = ExtResource("1_emtyj")

[node name="dominoSlot" parent="." instance=ExtResource("2_cy4qi")]
visible = false
position = Vector2(740, 360)
rotation = 1.5708
script = ExtResource("3_kpsxb")

[node name="playerHand" type="Node2D" parent="."]
script = ExtResource("4_o0xru")

[node name="teammateHand" type="Node2D" parent="."]
script = ExtResource("5_vddux")

[node name="opponentHand1" type="Node2D" parent="."]
script = ExtResource("6_xnnqk")

[node name="opponentHand2" type="Node2D" parent="."]
script = ExtResource("7_mjw1d")

[node name="subDom" type="Button" parent="."]
visible = false
anchors_preset = -1
anchor_left = 0.132
anchor_top = 0.617
anchor_right = 0.132
anchor_bottom = 0.617
offset_left = 548.0
offset_top = 667.0
offset_right = 734.0
offset_bottom = 711.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8
theme_override_font_sizes/font_size = 26
text = "Finish Turn"

[node name="myScore" type="Label" parent="."]
offset_left = 79.0
offset_top = 28.0
offset_right = 403.0
offset_bottom = 111.0
theme_override_fonts/font = ExtResource("9_gaopx")
theme_override_font_sizes/font_size = 47
text = "Our Score: 0"

[node name="opponentScore" type="Label" parent="."]
offset_left = 934.0
offset_top = 30.0
offset_right = 1405.0
offset_bottom = 102.0
theme_override_fonts/font = ExtResource("9_gaopx")
theme_override_font_sizes/font_size = 38
text = "Opponent Score: 0"

[node name="coin" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(1216, 669)
scale = Vector2(3.1458, 3.5063)
sprite_frames = SubResource("SpriteFrames_vuva4")
speed_scale = 5.0

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="endRound" type="Timer" parent="."]
wait_time = 2.59

[node name="startGame" type="Button" parent="."]
offset_left = 514.0
offset_top = 295.0
offset_right = 767.0
offset_bottom = 366.0
theme_override_font_sizes/font_size = 45
text = "Start Game"

[node name="runThroughDoms" type="Timer" parent="."]
wait_time = 0.5

[node name="plusOne" type="Label" parent="."]
visible = false
offset_left = 804.0
offset_top = 339.0
offset_right = 844.0
offset_bottom = 362.0
scale = Vector2(2, 2)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("9_gaopx")
theme_override_font_sizes/font_size = 31
text = "+1"

[node name="myTeamPoints" type="Label" parent="."]
visible = false
offset_left = 253.0
offset_top = 82.0
offset_right = 293.0
offset_bottom = 105.0
scale = Vector2(2, 2)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("9_gaopx")
theme_override_font_sizes/font_size = 31
text = "+1"

[node name="opTeamPoints" type="Label" parent="."]
visible = false
offset_left = 1159.0
offset_top = 80.0
offset_right = 1199.0
offset_bottom = 103.0
scale = Vector2(2, 2)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("9_gaopx")
theme_override_font_sizes/font_size = 31
text = "+1"

[node name="trumpSelector" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="trumpSelector"]
offset_left = -24.0
offset_top = -6.0
offset_right = 1253.0
offset_bottom = 713.0
scale = Vector2(1.06696, 1.04576)
color = Color(0, 0, 0, 0.780392)

[node name="Label" type="Label" parent="trumpSelector/ColorRect"]
layout_mode = 0
offset_top = 138.0
offset_right = 1279.0
offset_bottom = 292.0
theme_override_fonts/font = ExtResource("9_gaopx")
theme_override_font_sizes/font_size = 75
text = "Congrats you won the bid!

Select the trump for the round"
horizontal_alignment = 1

[node name="blank" type="Sprite2D" parent="trumpSelector/ColorRect"]
position = Vector2(340, 446)
rotation = 1.5708
scale = Vector2(10, 9.146)
texture = ExtResource("12_xlbo7")
region_enabled = true
region_rect = Rect2(76, 18, 12, 12)

[node name="one" type="Sprite2D" parent="trumpSelector/ColorRect"]
position = Vector2(190, 446)
rotation = 1.5708
scale = Vector2(10, 9.146)
texture = ExtResource("12_xlbo7")
region_enabled = true
region_rect = Rect2(44, 18, 12, 12)

[node name="two" type="Sprite2D" parent="trumpSelector/ColorRect"]
position = Vector2(490, 446)
rotation = 1.5708
scale = Vector2(10, 9.146)
texture = ExtResource("12_xlbo7")
region_enabled = true
region_rect = Rect2(65, 18, 12, 12)

[node name="three" type="Sprite2D" parent="trumpSelector/ColorRect"]
position = Vector2(640, 446)
rotation = 1.5708
scale = Vector2(10, 9.146)
texture = ExtResource("12_xlbo7")
region_enabled = true
region_rect = Rect2(140, 2, 12, 12)

[node name="four" type="Sprite2D" parent="trumpSelector/ColorRect"]
position = Vector2(790, 446)
rotation = 1.5708
scale = Vector2(10, 9.146)
texture = ExtResource("12_xlbo7")
region_enabled = true
region_rect = Rect2(97, 50, 12, 12)

[node name="five" type="Sprite2D" parent="trumpSelector/ColorRect"]
position = Vector2(940, 446)
rotation = 1.5708
scale = Vector2(10, 9.146)
texture = ExtResource("12_xlbo7")
region_enabled = true
region_rect = Rect2(204, 34, 12, 12)

[node name="six" type="Sprite2D" parent="trumpSelector/ColorRect"]
position = Vector2(1090, 446)
rotation = 1.5708
scale = Vector2(10, 9.146)
texture = ExtResource("12_xlbo7")
region_enabled = true
region_rect = Rect2(161, 82, 12, 12)

[node name="blankButton" type="Button" parent="trumpSelector/ColorRect"]
show_behind_parent = true
offset_left = 134.0
offset_top = 387.0
offset_right = 248.0
offset_bottom = 510.0

[node name="oneButton" type="Button" parent="trumpSelector/ColorRect"]
show_behind_parent = true
offset_left = 283.0
offset_top = 387.0
offset_right = 397.0
offset_bottom = 510.0

[node name="twoButton" type="Button" parent="trumpSelector/ColorRect"]
show_behind_parent = true
offset_left = 431.0
offset_top = 387.0
offset_right = 545.0
offset_bottom = 510.0

[node name="threebutton" type="Button" parent="trumpSelector/ColorRect"]
show_behind_parent = true
offset_left = 583.0
offset_top = 387.0
offset_right = 697.0
offset_bottom = 510.0

[node name="fourButton" type="Button" parent="trumpSelector/ColorRect"]
show_behind_parent = true
offset_left = 734.0
offset_top = 387.0
offset_right = 848.0
offset_bottom = 510.0

[node name="fiveButton" type="Button" parent="trumpSelector/ColorRect"]
show_behind_parent = true
offset_left = 884.0
offset_top = 387.0
offset_right = 998.0
offset_bottom = 510.0

[node name="sixButton" type="Button" parent="trumpSelector/ColorRect"]
show_behind_parent = true
offset_left = 1032.0
offset_top = 387.0
offset_right = 1146.0
offset_bottom = 510.0

[connection signal="pressed" from="subDom" to="gameManager" method="_on_sub_dom_pressed"]
[connection signal="pressed" from="startGame" to="gameManager" method="_on_start_game_pressed"]
[connection signal="pressed" from="trumpSelector/ColorRect/blankButton" to="gameManager" method="_on_blank_button_pressed"]
[connection signal="pressed" from="trumpSelector/ColorRect/oneButton" to="gameManager" method="_on_one_button_pressed"]
[connection signal="pressed" from="trumpSelector/ColorRect/twoButton" to="gameManager" method="_on_two_button_pressed"]
[connection signal="pressed" from="trumpSelector/ColorRect/threebutton" to="gameManager" method="_on_threebutton_pressed"]
[connection signal="pressed" from="trumpSelector/ColorRect/fourButton" to="gameManager" method="_on_four_button_pressed"]
[connection signal="pressed" from="trumpSelector/ColorRect/fiveButton" to="gameManager" method="_on_five_button_pressed"]
[connection signal="pressed" from="trumpSelector/ColorRect/sixButton" to="gameManager" method="_on_six_button_pressed"]
